# GetMyPass

./: Cargo.toml  README.md
.github/workflows/: release.yml
Formula/: gmp.rb  gmpass.rb
scripts/: build-deb.sh
src/: app.rs  clipboard.rs  config.rs  handler.rs  main.rs  theme.rs  totp.rs  ui.rs  vault.rs
